--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     <h3>문의하기 | Contact Us</h3>
     <p>한국 유학, 지금 서울 유학원과 함께 시작하세요.</p>
     <p class="en">Start your study journey in Korea with Seoul Study Abroad.</p>
-    <p>Email: seoul.globalacademy@gmail.com | CEO: JiWoo Hwang, Anna Kim </p>
+    <p>Email: seoul.globalacademy@gmail.com | CEO: JiWoo Hwang & Anna Kim </p>
   </div>
 </section>
 
