--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>서울 유학원 | Seoul Study Abroad</title>
+  <title>서울 유학원 | Seoul Global Academy</title>
   <style>
     body {
       margin: 0;
