--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 <body>
 
 <header>
-  <h1>서울 유학원 | Seoul Study Abroad</h1>
+  <h1>서울 유학원 | Seoul Global Academy</h1>
   <nav>
     <a href="#about">회사소개</a>
     <a href="#services">서비스</a>
